# VF-Digital

./: .dockerignore  Dockerfile  README.md  app.py  data.dvc  exp1.ipynb  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
utils/: database.py  logger_config.py  video_utils.py  visualize.py
